# AudioSampling

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/david/sampling/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/lamemp3/: VbrTag.c  VbrTag.h  encoder.c  id3tag.c  id3tag.h  lame.c  pcm2mp3.cpp  pcm2mp3.h  quantize.c  takehiro.c  util.c  vbrquantize.c
app/src/main/java/com/david/sampling/: MainActivity.java
app/src/main/java/com/david/sampling/util/: AudioSampler.java  LameJni.java  PcmToWavUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/david/sampling/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
